turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:12: error: ':' expected but ')' found.
def setCouleurSol(couleur) {
                         ^LangtonsAnt:27: error: identifier expected but '}' found.
}
^